2009-01-26  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.7.11
	* Fixed issue with incorrect initialisation of application_dir
	* Deleting old events periodically
	* Vacuuming database periodically
	* Fixed issue were EPG had gaps if start_time was now

2009-01-18  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.7.10
	* Added dynamically loaded VLC based engine
	* Persistent window geometry
	* Added option for hiding status_icon

2009-01-04  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.7.9
	* Fixed issue with man page not being included in dist

2009-01-02  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.7.8
	* Fixed issue with initial scan parser
	* Added fa translation

2009-01-01  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.7.7
	* Added de translation
	* Added it translation
	* Put in timeout for xine process to reap
	* Fix for extent EPG events
	* MPlayer engine is available again
	* Added channels.conf importer

2008-12-06  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.7.6
	* Removing FIFO on every request so that stalled xine processes don't interfere with new xine requests
	* Added sv translation

2008-11-30  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.7.5
	* Changed recording mechanism to use an IOChannel for better buffering
	* Opening streamer in main thread to avoid locking
	* Now reports if xine binary is not available

2008-11-25  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.7.4
	* Fixed issue with race condition on scheduled recording.

2008-11-22  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.7.3
	* Fixed recording logic switch
	* Fixed meters dialog without border
	* Fixed dialog warning messages
	* Default video driver is xv

2008-11-05  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.7.2
	* Writes to FIFO are now non blocking so a xine crash will not lock up the application
	* Fixed issue with mute not restoring its state
	* Fixed issue with child xine process not reaping